demo tut schedule added

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -121,14 +121,21 @@ Email: varuns@iitm.ac.in </li>
 </table>
 
 <br>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%">
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
 	<li> 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.</li>
 	<li> 28/1: Demo and tutorial schedule (tentative) added
 </ul>
-</p>
+</td></tr>
+</table>
 
+<br>
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+
+<tr> <td width="100%">
 <h3>
 Computing exercises:</h3>
 <ul>
@@ -137,6 +144,8 @@ Computing exercises:</h3>
 	<li>Check out the example for 1D unstretched flame within the Run directory:
 Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>	
 </ul>
+</td> </tr>
+</table><br>
 
 <h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font>:</h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
@@ -172,8 +181,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 	<tr> <td> <font color="khaki">Solid fuel combustion</font></td>
 	<td> April 25th</td></tr>	
 
-</table><br>
-
+</table>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
