--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -88,8 +88,10 @@ Email: varuns@iitm.ac.in </li>
 	</ul>
 
 	<h2> Grading policy: </h2>
-	<ul> <li> Mid-semester exam (March 1--4): 50%</li>
-		 <li> Final exam: 50%</li>
+	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
+		 <li> Final exam: 45%</li>
+		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
+		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=Bs3dlpIytmT2Zji" target="_blank">LaTeX Template</a></li>
 	</ul>
 
     <h2> Questions?</h2>
@@ -128,6 +130,7 @@ Updates/Announcements:</font></h3>
 <ul>
 	<li> 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.</li>
 	<li> 28/1: Demo and tutorial schedule (tentative) added
+	<li> 29/1: As discussed in class, a schedule for scribing the lectures has been added (see Grading policy)
 </ul>
 </td></tr>
 </table>
@@ -147,7 +150,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </td> </tr>
 </table><br>
 
-<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font>:</h3>
+<h3><font color="white">Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font>:</font></h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
