adding template compatible with online editor

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -91,7 +91,7 @@ Email: varuns@iitm.ac.in </li>
 	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
 		 <li> Final exam: 45%</li>
 		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
-		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=Bs3dlpIytmT2Zji" target="_blank">LaTeX Template</a></li>
+		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=0aY5tBWDq9xPHKZ" target="_blank">LaTeX Template</a></li>
 	</ul>
 
     <h2> Questions?</h2>
