--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -109,7 +109,8 @@ Email: varuns@iitm.ac.in </li>
 <tr> <td width="100%"><h2> Suggested Textbooks: </h2>
 <ul> 
     <li> Combustion Technology: Essentials of Flames and Burners, by V. Raghavan, Ane/Athena Books, 2016 (VR) </li>
-    <li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
+    <li> An introduction to fire dynamics, Douglas Drysdale, 2011 (DD) </li>
+	<li> Combustion and Mass transfer by D. B. Spalding, 1979 (DBS) </li>
     <li> Combustion Theory by F. A. Williams, ABP (FAW), 1985 </li>
     <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
@@ -215,7 +216,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
 	
 	<tr> <td> Flammability, Quenching, and ignition energy  </td>
-	<td> HSM 7.1, 7.2, 8.0 </td></tr>
+	<td> HSM 7.1, 7.2, 8.0, DD $3.1, $3.3,  </td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
 	<td> CKL $11.1, $11.2, $11.3, TP $5.3 </td></tr>
