--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -129,9 +129,10 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-	<li> 26/1: Tutorial on premixed flames is updated, reading exercise for premixed flame computations is added.</li>
-	<li> 28/1: Demo and tutorial schedule (tentative) added
-	<li> 29/1: As discussed in class, a schedule for scribing the lectures has been added (see Grading policy)
+	<li> 26/1: Reading exercise for premixed flame computations is added.</li>
+	<li> 28/1: Demo and tutorial schedule (tentative) added.</li>
+	<li> 29/1: As discussed in class, a schedule for scribing the lectures has been added (see Grading policy).</li>
+	<li> 30/1: Tutorial on premixed flames is updated.</li>
 </ul>
 </td></tr>
 </table>
