--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -115,10 +115,6 @@ Email: varuns@iitm.ac.in </li>
     <li> Understanding Combustion by H. S. Mukunda, Macmillan India (HSM) </li>
     <li> Combustion Physics by C. K. Law (CKL) </li>
 	<li> Theoretical and Numerical Combustion by Thierry Poinsot and Denis Veynante, 2016 (TP)</li>
-	<li> An Introduction to Combustion Concepts and Applications by S.R. Turns, McGraw Hill </li> 
-	<li> Principles of Combustion by Kenneth Kuo, John Wiley </li>
-    <li> Fuels and Combustion, Smith and Stinson, McGraw Hill, New York, 1952 </li>
-    <li> Combustion and Gasification in Fluidized Beds, Taylor & Francis Group, LLC, 2006 </li>
 </ul>
 </tr>
 </table>
@@ -131,7 +127,7 @@ Updates/Announcements:</font></h3>
 <ul>
 	<li> 26/1: Reading exercise for premixed flame computations is added.</li>
 	<li> 28/1: Demo and tutorial schedule (tentative) added.</li>
-	<li> 29/1: As discussed in class, a schedule for scribing the lectures has been added (see Grading policy).</li>
+	<li> 29/1: Schedule for scribing the lectures has been added (see Grading policy).</li>
 	<li> 30/1: Tutorial on premixed flames is updated.</li>
 </ul>
 </td></tr>
