collapsibles all around

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -41,6 +41,13 @@ h4{
   font-size: 12pt;
   margin-left: 4px;
 }
+h5{
+  color: lightyellow;
+  margin-top: 4px;
+  margin-bottom: 4px;
+  font-size: 14pt;
+  margin-left: 4px;
+}
 p
 {
   margin:0;
@@ -91,69 +98,6 @@ p
 <tr> <td><center> <h1> Jan-May 2019</h1> </center></td> </tr>
 </table> 
 
-<button class="collapsible"><h3>View course info</h3></button>
-<div class="content">
-<table border="1" cellspacing="1" cellpadding="1"  width="100%">
-<tr><td width="50%">
-<h2> Instructors: </h2>
-<ul> <li> Dr. Krithika Narayanaswamy <br>
-# 203, Thermodynamics and Combustion Engineering Lab<br>
-Email: krithika@iitm.ac.in </li><br>
-<li> Dr. S. Varunkumar <br>
-# 206B, Thermodynamics and Combustion Engineering Lab<br>
-Email: varuns@iitm.ac.in </li>
-</ul>
-
-<h2> General information: </h2>
-<ul> <li> 9 credit elective course </li>
-     <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li><br>
-     <li> 3 lecture hours per week: E slot <br>
-		 <p><font color="lightgreen">Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM, Friday: 4:50-5:40 PM</font></p></li>
-	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
-	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
-</ul>
-</td>
-
-<td width="50%"> 
-	<h2> Learning Outcomes: </h2>
-	<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
-		 <li> Ability to design and analyse a combustion device. </li>
-	</ul>
-	
-	<h2> Pre-requisites: </h2>
-	<ul> <li> ME6060: Fundamentals of Combustion (or) ME5105: Applied thermodynamics </li>
-		 <li> Consent of Teacher is required if no prior coursework on these topics has been done. </li>
-	</ul>
-
-	<h2> Grading policy: </h2>
-	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
-		 <li> Final exam: 45%</li>
-		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
-		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
-	</ul>
-
-    <h2> Questions?</h2>
-	<ul>
-		<li> Instructors' office hours: <br>
-			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> seminar hall </li><br>
-		<li> Teaching Assistants: <br>
-		 Syed Mughees Ali, Shanmugasundaram D.</li>
-	</ul>
-</td>
-</tr>
-</table>
-</div><br>
-
-<table border="1" cellspacing="1" cellpadding="1"  width="100%">
-<tr> <td width="100%"><h3> Grading policy: </h3>
-	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
-		 <li> Final exam: 45%</li>
-		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
-		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
-	</ul>
-</tr>
-</table>
-	
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%"><h3> Suggested Textbooks: </h3>
 <ul> 
@@ -167,6 +111,69 @@ Email: varuns@iitm.ac.in </li>
 </ul>
 </tr>
 </table>
+
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%"><h3> Grading policy: </h3>
+	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
+		 <li> Final exam: 45%</li>
+		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
+		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
+	</ul>
+</tr>
+</table><br>
+
+<button class="collapsible"><h5>View more course info</h5></button>
+<div class="content">
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr><td width="50%">
+<h3> Instructors: </h3>
+<ul> <li> Dr. Krithika Narayanaswamy <br>
+# 203, Thermodynamics and Combustion Engineering Lab<br>
+Email: krithika@iitm.ac.in </li><br>
+<li> Dr. S. Varunkumar <br>
+# 206B, Thermodynamics and Combustion Engineering Lab<br>
+Email: varuns@iitm.ac.in </li>
+</ul>
+
+<h3> General information: </h3>
+<ul> <li> 9 credit elective course </li>
+     <li> Open for B. Tech (8th sem), DD (8th, 10th sem), M. Tech, M.S, PhD </li><br>
+     <li> 3 lecture hours per week: E slot <br>
+		 <p><font color="lightgreen">Tuesdays 11-11:50 AM, Wednesdays: 10-10:50 AM, Friday: 4:50-5:40 PM</font></p></li>
+	  <li> Every second Thursday hour (8-8:50 AM) is a tutorial hour, unless stated otherwise </li><br>
+	  <li> <p><font color="lightgreen">Venue: TDCE seminar hall</font></p></li>
+</ul>
+</td>
+
+<td width="50%"> 
+	<h3> Learning Outcomes: </h3>
+	<ul> <li> Thorough understanding of combustion phenomenon involved in different applications </li> 
+		 <li> Ability to design and analyse a combustion device. </li>
+	</ul>
+	
+	<h2> Pre-requisites: </h2>
+	<ul> <li> ME6060: Fundamentals of Combustion (or) ME5105: Applied thermodynamics </li>
+		 <li> Consent of Teacher is required if no prior coursework on these topics has been done. </li>
+	</ul>
+
+<!--	<h2> Grading policy: </h2>
+	<ul> <li> Mid-semester exam (March 1--4): 30%</li>
+		 <li> Final exam: 45%</li>
+		 <li> Demonstration reports: 20%. Groups of 2 or 3.</li>
+		 <li> Lecture notes: 5% <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=M7omgwNiUEnrgG3" target="_blank">February Schedule</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=8YtY5rA5G4JVuxz" target="_blank">LaTeX Template</a></li>
+	</ul>
+-->
+    <h3> Questions?</h3>
+	<ul>
+		<li> Instructors' office hours: <br>
+			Friday 10-11 AM, <a href="https://goo.gl/maps/PqbdfLVkFJr" target="_blank"> TDCE</a> seminar hall </li><br>
+		<li> Teaching Assistants: <br>
+		 Syed Mughees Ali, Shanmugasundaram D.</li>
+	</ul>
+</td>
+</tr>
+</table>
+</div><br>
 
 <br>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
@@ -200,7 +207,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </td> </tr>
 </table><br>
 
-<button class="collapsible"><h3>View schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3></button>
+<button class="collapsible"><h5>View schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
@@ -271,7 +278,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 	<td> CKL $11.1, $11.2, $11.3, TP $5.3 </td></tr>
 </table><br>
 
-<button class="collapsible"><h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example</h3></button>
+<button class="collapsible"><h5>Module 2: Non-premixed flames, with counterflow diffusion flame as an example</h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
@@ -294,7 +301,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </table><br>
 </div><br>
 
-<button class="collapsible"><h3>Module 3: Burners for gaseous fuels</h3></button>
+<button class="collapsible"><h5>Module 3: Burners for gaseous fuels</h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
@@ -312,7 +319,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </table><br>
 </div><br>
 
-<button class="collapsible"><h3>Module 4: Spray combustion and applications</h3></button>
+<button class="collapsible"><h5>Module 4: Spray combustion and applications</h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
@@ -337,7 +344,7 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </div><br>
 
 <!--<h3> Module 5: Solid fuel combustion</h3> -->
-<button class="collapsible"><h3>Module 5: Solid fuel combustion</h3></button>
+<button class="collapsible"><h5>Module 5: Solid fuel combustion</h5></button>
 <div class="content">
 	<table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
