collapsibles all around

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -182,19 +182,17 @@ Email: varuns@iitm.ac.in </li>
 Updates/Announcements:</font></h3>
 <ul>
 <li> 30/1: Tutorial on premixed flames is updated.</li></ul>
-	<button class="collapsible"><h4>Older announcements</h4></button>
+	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
 	<li> 29/1: Schedule for scribing the lectures has been added (see Grading policy).</li>
 	<li> 28/1: Demo and tutorial schedule (tentative) added.</li>
 	<li> 26/1: Reading exercise for premixed flame computations is added.</li>
-</ul></div>
+</ul>
+</div>
 </td></tr>
 </table>
-
-<br>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
-
 <tr> <td width="100%">
 <h3>
 Computing exercises:</h3>
@@ -207,6 +205,12 @@ Path-to-FlameMaster/Run/FlameMan/Prem/Unstretched </li>
 </td> </tr>
 </table><br>
 
+<!--<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%">
+Upcoming demo: Premixed flames: bunsen burner, flat flame burner -- February 7th
+Upcoming tutorial session: Premixed flames -- February 14th
+</td> </tr>
+</table> -->
 <button class="collapsible"><h5>View schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
