collapsibles all around

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -191,7 +191,7 @@ Updates/Announcements:</font></h3>
 </ul>
 </div>
 </td></tr>
-</table>
+</table><br>
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
 <tr> <td width="100%">
 <h3>
