collapsibles all around

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -12,7 +12,7 @@ A:link{color:yellow}
 A:visited{color:yellow}
 A:hover{color:red}
 A:hover{color:red}
-h2   {color: lightpink;}
+h2  {color: white;}
 h3  {color: lightpink;}
 }
 table, th, td {
@@ -94,8 +94,8 @@ p
 <body bgcolor = "black">
 
 <table border="0" cellspacing="1" cellpadding="1"  width="100%">
-<tr> <td><center> <h1> ME6166: Combustion Technology </td>
-<tr> <td><center> <h1> Jan-May 2019</h1> </center></td> </tr>
+<tr> <td><center> <h2> ME6166: Combustion Technology </h2></td>
+<tr> <td><center> <h2> Jan-May 2019</h2> </center></td> </tr>
 </table> 
 
 <table border="1" cellspacing="1" cellpadding="1"  width="100%">
