adding sanskrit lessons past passive

--- a/logger/logger.html
+++ b/logger/logger.html
@@ -46,11 +46,9 @@ Events:
 <li> <a href="https://www.dropbox.com/s/vygxjoxfhz1ec1e/RKMutt_Sister_Nivedita.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">150th Sister Nivedita day</a>, <a href="https://www.dropbox.com/s/jyl1dacw47bkfa7/Speech.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Speech</a></li>
 </ul>
 
-<!--
 Lessons:
 <ul>
-<li><a href="https://www.dropbox.com/s/vsg8s9pzj2ywvgw/Paricaya_Lesson6_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive</a>
+<li><a href="https://www.dropbox.com/s/vsg8s9pzj2ywvgw/Paricaya_Lesson6_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive I</a>, <a href="https://www.dropbox.com/s/605yf11jbhkoklb/Paricaya_Lesson7_PastPassive.pdf?dl=0" style="text-decoration:none;color:white" target="_blank">Past passive II</a>
 </ul>
--->
 
 </body></html>
