adding sanskrit lessons past passive

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -275,8 +275,14 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Flame speed calculations using FlameMaster </td>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=ju2N6Pgpfy2VyLv" target="_blank">PREMIX documentation</a> </td></tr>
 	
-	<tr> <td> Flammability, Quenching, and ignition energy  </td>
-	<td> HSM $7.1, $7.2, $8.0, DD $3.1, $3.3,  CKL $8.5</td></tr>
+	<tr> <td> Quenching and ignition energy  </td>
+	<td> HSM $7.1, $7.2, $8.0</td></tr>
+	
+	<tr> <td> Flammability limits  </td>
+	<td> DD $3.1, $3.3,  CKL $8.5</td></tr>
+	
+	<tr> <td> Flame stretch  </td>
+	<td> TP $2.6</td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
 	<td> CKL $11.1, $11.2, $11.3, TP $5.3 </td></tr>
