--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -257,7 +257,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=lyIOa7Wfcv0Vra0" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/index.php/s/kQeLROs54Biyg0j" target="_blank">Reading Exercise</a> </h3>
+<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a> </h3>
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
