--- a/index.html
+++ b/index.html
@@ -739,6 +739,22 @@ Property Estimation Using THERM</a> (Credits: M. C. Sanjay, M. Tech 2017)
 <i>*Submitted versions of manuscripts that are still under review and pre-prints of publications are provided to ensure timely dissemination of scholarly and technical work. Copyright and all rights therein are retained by the authors or by other copyright holders. All persons copying this information are expected to adhere to the terms and constraints invoked by each author's or publisher's copyright. These documents may not be reposted without the explicit permission of the copyright holder.</i>
 
 <ul>
+<div id="flip0">
+	<li> Aditya Lele, Karan Soni, Krithika Narayanaswamy, Anand Krishnasamy, "Experimental and Modeling Investigation of NO Formation Mechanism for Biodiesel and its Blend with Methanol", WCX SAE World Congress Experience, 2019 
+</div>
+<div id="panel0">
+	<ul style="list-style-type:square">
+<!--	<li><a href="https://www.tandfonline.com/eprint/fzZsKINfreTb2vC9PfIR/full">e-print</a>
+	<li><a href="https://www.dropbox.com/s/59qd6qat51mh1pz/MMA.pdf?dl=0" target="_blank">Preprint*</a></li> -->
+	<li><a href="https://www.sae.org/publications/technical-papers/content/2019-01-0217/" target="_blank">Journal version</a></li>
+<!-- <li><a href="https://www.dropbox.com/s/q2c60lulb44mutd/supplementary.pdf?dl=0" target="_blank">Supplementary document</a></li>
+	<li>Mechanism files: <a href="https://www.dropbox.com/s/wo6drchfpdds0zl/short_mma_mech_Chemkin.inp?dl=0" target="_blank">Chemkin format</a>/<a href="https://www.dropbox.com/s/mfa36i6rqfi6w99/short_mma_mech_FlameMaster.txt?dl=0" target="_blank">FlameMaster format</a>
+	<li><a href="https://www.dropbox.com/s/iyetkm3s0ovgy99/thermo_mma.txt?dl=0" target="_blank">Thermodynamic data</a></li>
+	<li><a href="https://www.dropbox.com/s/jwjrvnxahn4hoa2/trans_mma.txt?dl=0" target="_blank">Transport data</a></li> -->
+</ul>
+</div>
+<br>
+
 
 <div id="flip1">
 	<li> Shanmugasundaram Dakshnamurthy, Denis A. Knyazkov, Artem M.
@@ -1052,7 +1068,8 @@ For an M. Tech project*
 <a href="http://www.tutorialspoint.com/codingground.htm" target="_blank">Coding ground</a></br>
 <a href="https://www.overleaf.com" target="_blank">WriteLaTeX</a></br>
 <a href="http://detexify.kirelabs.org/classify.html" target="_blank">Detexify</a></br>
-<a href="https://www.wordclouds.com" target="_blank">WordClouds</a></br></br>
+<a href="https://www.wordclouds.com" target="_blank">WordClouds</a></br>
+<a href="https://www.w3schools.com" target="_blank">W3Schools</a><br><br>
 </td>
 </tr>
 
