--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -181,10 +181,11 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-<li> 4/2: Tutorial on premixed flames is updated.</li></ul>
+<li> 5/2: Demo on premixed flames is scheduled for Thursday (6/2) at 8 AM. Assemble at the seminar hall sharp at 8 AM. </li></ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
+	<li> 4/2: Tutorial on premixed flames is updated.</li>
 	<li> 29/1: Schedule for scribing the lectures has been added (see Grading policy).</li>
 	<li> 28/1: Demo and tutorial schedule (tentative) added.</li>
 	<li> 26/1: Reading exercise for premixed flame computations is added.</li>
