--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -181,7 +181,7 @@ Email: varuns@iitm.ac.in </li>
 <h3> <font color="pink">
 Updates/Announcements:</font></h3>
 <ul>
-<li> 6/2: Demo on premixed flames is scheduled for Thursday (7/2) at 8 AM. Assemble at the seminar hall sharp at 8 AM. </li></ul>
+<li> 6/2: Demo on premixed flames is scheduled for Thursday (7/2) at 8 AM. Assemble at the TDCE seminar hall sharp at 8 AM. </li></ul>
 	<button class="collapsible"><h4>View older announcements</h4></button>
 	<div class="content">
 	<ul>
