adding demo questions

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -212,16 +212,24 @@ Upcoming demo: Premixed flames: bunsen burner, flat flame burner -- February 7th
 Upcoming tutorial session: Premixed flames -- February 14th
 </td> </tr>
 </table> -->
-<button class="collapsible"><h5>View schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h5></button>
+<!-- <button class="collapsible"><h5>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h5></button> -->
+<table border="1" cellspacing="1" cellpadding="1"  width="100%">
+<tr> <td width="100%">
+<h3>Schedule for <font color="greenyellow">demonstrations</font> and <font color="khaki">tutorial sessions</font></h3><br>
+<table border="1" cellspacing="2" cellpadding="2" width="100%">
+	<col width = "65%">
+	<col width = "35%">		
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>. Due by February 21st </font></td>
+	<td> February 7th</td></tr>
+	<tr> <td> <font color="khaki">Premixed flames</font> </td>
+	<td> February 14th</td></tr>
+</table>
+
+<button class="collapsible"><h5>View more events</h5></button>
 <div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Premixed flames: bunsen burner, flat flame burner </font></td>
-	<td> February 7th</td></tr>
-
-	<tr> <td> <font color="khaki">Premixed flames</font> </td>
-	<td> February 14th</td></tr>
 	
 	<tr> <td> <font color="greenyellow">Non-Premixed flames: Opposed flow burner (in-class video), Tsuji burner</font></td>
 	<td> February 21st</td></tr>
@@ -248,6 +256,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> April 25th</td></tr>	
 </table>
 </div>
+</table>
 
 <br><br>
 <table border="1" cellspacing="2" cellpadding="2"  width="100%">
