--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -294,7 +294,9 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $2.6</td></tr>
 	
 	<tr> <td> Turbulent premixed flames  </td>
-	<td> CKL $11.1, $11.2, $11.3, TP $5.3, DBS $16 </td></tr>
+	<td>  Introduction: CKL $11.1, $11.2, $11.3<br>
+		Modeling: TP $5.1.3, $5.3.2, $5.3.5, $5.3.6
+	 </td></tr>
 </table><br>
 
 <button class="collapsible"><h5>Module 2: Non-premixed flames, with counterflow diffusion flame as an example</h5></button>
