--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -219,7 +219,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">		
-	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>. Due by February 21st </font></td>
+	<tr> <td> <font color="greenyellow">Premixed flames: Jet flame <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=2ZU0AJXXICyb2g7" target="_blank">Questionnaire</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=BaqqHxcjNhr8wvb" target="_blank">Images</a>. Due by February 21st </font></td>
 	<td> February 7th</td></tr>
 	<tr> <td> <font color="khaki">Premixed flames</font> </td>
 	<td> February 14th</td></tr>
