adding counterflow details

--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -268,7 +268,8 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	</tr> 
 </table><br>
 
-<h3>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a> </h3>
+<button class="collapsible"><h5>Module 1: Premixed flames, with bunsen burner as an example: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=RUupt9g8MxPX20c" target="_blank">Tutorial</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kQeLROs54Biyg0j" target="_blank">Reading Exercise</a> </h5></button>
+<div class="content">
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
@@ -300,29 +301,31 @@ Upcoming tutorial session: Premixed flames -- February 14th
 		Relevant sections: <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=kwUfYZkAHmwwpx9" target="_blank">TP $5.1</a>, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=c9YLc2pmGQYKTWg" target="_blank">TP $5.3</a>
 	 </td></tr>
 </table><br>
+</div><br>
+<br>
 
-<button class="collapsible"><h5>Module 2: Non-premixed flames, with counterflow diffusion flame as an example</h5></button>
-<div class="content">
+<h3>Module 2: Non-premixed flames, with counterflow diffusion flame as an example</h3>
+<!-- <div class="content"> -->
 <table border="1" cellspacing="2" cellpadding="2" width="100%">
 	<col width = "65%">
 	<col width = "35%">	
    <tr> 
-	<td> Using opp-diff burner as example, introduce counterflow non-premixed flames. </td>
-	<td> </td> </tr>
+	<td> Candle flame, counterflow non-premixed flame </td>
+	<td> TP $3.1, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=a2HkO4BTIpNTTF1" target="_blank">OPPDIFF</a></td> </tr>
 	
-	<tr> <td> Governing equations in physical space, methodology for calculating opp-diff flame structure at different strain rates using FlameMaster. </td>
-	<td>  </td></tr>
+	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
+	<td> </td></tr>
 	
 	<tr> <td> Transformation of 1D conservation laws into mixture fraction space  </td>
 	<td> </td></tr>
 	
-	<tr> <td> Flamelet equation and the concept of scalar dissipation rate and its relation to reaction rates at different strain rates.   </td>
+	<tr> <td> Flamelet equation and the concept of scalar dissipation rate and its relation to reaction rates at different strain rates   </td>
 	<td> </td></tr>
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
 	<td>  </td></tr>
 </table><br>
-</div><br>
+<!-- </div><br> -->
 
 <button class="collapsible"><h5>Module 3: Burners for gaseous fuels</h5></button>
 <div class="content">
