--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -314,7 +314,7 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<td> TP $3.1, <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=a2HkO4BTIpNTTF1" target="_blank">Gov Eqns: Opposed flow flame</a></td> </tr>
 	
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
-	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">OPPDIFF</a></td></tr>
+	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">Solution Procedure: OPPDIFF</a></td></tr>
 	
 	<tr> <td> Transformation of 1D conservation laws into mixture fraction space  </td>
 	<td> </td></tr>
