--- a/index.html
+++ b/index.html
@@ -607,6 +607,17 @@ Rohit obtained his B. Tech in Mechanical Engineering from Vishwakarma Institute 
 	Fuels, both renewable and non-renewable, are major sources of energy. Reaction schemes describing the oxidation of fuels are increasingly incorporated within computations where the focus is in capturing reactivity and the amounts of emissions. Thermodynamic properties of the species, which include the heat of formation, specific heat capacity and entropy, must be provided as part of such a kinetic scheme. These properties are used in determining the (a) equilibrium constant and thereby, the (b) reverse reaction rate constant using the principle of microscopic reversibility and (c) the heat release term of the energy conservation equation.
 	<br><br>
 	To find the thermodynamic property values of a species, group additivity approach can be used, which is a simple and feasible method. It hinges on the idea that: for any species, the thermodynamic property values can be calculated as the sum of contributions to the property from all groups present in that species. THERM is a software that uses this method to find property values, taking in the group type, number of rotors and symmetry number of the species, as inputs. In this project, a program is developed that can calculate all the inputs needed for THERM, from either molfile or SMILES of a given species. This program is capable of processing any non-cyclic stable or single radical species, made up of carbon, hydrogen and oxygen atoms. The code is available open-source on <a href="https://github.com/mcsanjay/Program-input-to-THERM">github</a>.
+
+<td width="25%">
+<center><img src="./images/Sanjay.jpg" width="170">	
+</br>
+<h4><a href="https://www.linkedin.com/in/vaisakh-t-v-4a3505112" target="_blank">M. C. Sanjay</a><br></h4>
+<!--B. Tech in Mechanical Engineering from Vishwakarma Institute of Technology, Pune</br>-->
+</center>
+<p>Sanjay obtained his B. Tech in Mechanical Engineering from NIT Calicut in 2015. He received his M. Tech in Thermal Engineering at IIT Madras in 2017. His project focused on thermodynamic property estimation. </p></br>
+<!--<table border="1" cellspacing="1" cellpadding="5" width="150%"> -->
+</td>
+
 </td>
 </tr>
 </ul>
@@ -1082,6 +1093,7 @@ For an M. Tech project*
 <a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
 <a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
 <a href="http://phdcomics.com" target="_blank"> PhD comics </a><br>
+<a hre="https://theconversation.com/lets-ban-powerpoint-in-lectures-it-makes-students-more-stupid-and-professors-more-boring-36183" target="_blank"> No power points for lectures</a><br>
 <br>
 </td>
 </tr>
