--- a/index.html
+++ b/index.html
@@ -1093,7 +1093,7 @@ For an M. Tech project*
 <a href="https://www.hackerrank.com" target="_blank"> HackerRank</a> <br>
 <a href="https://www.gocomics.com/calvinandhobbes/" target="_blank"> Calvin & Hobbes</a> <br>
 <a href="http://phdcomics.com" target="_blank"> PhD comics </a><br>
-<a hre="https://theconversation.com/lets-ban-powerpoint-in-lectures-it-makes-students-more-stupid-and-professors-more-boring-36183" target="_blank"> No power points for lectures</a><br>
+<a href="https://theconversation.com/lets-ban-powerpoint-in-lectures-it-makes-students-more-stupid-and-professors-more-boring-36183" target="_blank"> No power points for lectures</a><br>
 <br>
 </td>
 </tr>
