--- a/teaching/ME6166_Jan_May_2019.html
+++ b/teaching/ME6166_Jan_May_2019.html
@@ -316,14 +316,20 @@ Upcoming tutorial session: Premixed flames -- February 14th
 	<tr> <td> Opp-diff flame structure at different strain rates using FlameMaster </td>
 	<td> <a href="https://owncloud.iitm.ac.in/public.php?service=files&t=XGdIH17Wjb40SVY" target="_blank">Solution Procedure: OPPDIFF</a></td></tr>
 	
-	<tr> <td> Transformation of 1D conservation laws into mixture fraction space  </td>
-	<td> </td></tr>
+	<tr> <td> Flamelet equations and concept of scalar dissipation rate  </td>
+	<td> TP $3.2</td></tr>
 	
-	<tr> <td> Flamelet equation and the concept of scalar dissipation rate and its relation to reaction rates at different strain rates   </td>
-	<td> </td></tr>
+	<tr> <td> Flame structure for irreversible infinitely fast chemistry </td>
+	<td> TP $3.3</td></tr>
+
+	<tr> <td> Steady strained 1D flame with infinitely fast chemistry and constant density: <br>Flamelet solution, relation of scalar dissipation rate to strain rate   </td>
+	<td> TP $3.4.2</td></tr> 
+	
+	<tr> <td>  Jet flame in an uniform flow field   </td>
+	<td> TP $3.4.4, HSM $10.1</td></tr> 	
 		
 	<tr> <td> Turbulent non-premixed flames  </td>
-	<td>  </td></tr>
+	<td> CKL $11.4 </td></tr>
 </table><br>
 <!-- </div><br> -->
 
